; ModuleID = '/home/carl/AnghaBench/linux/fs/hpfs/extr_file.c_hpfs_fiemap.c'
source_filename = "/home/carl/AnghaBench/linux/fs/hpfs/extr_file.c_hpfs_fiemap.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.inode = type { i32 }
%struct.fiemap_extent_info = type { i32 }

@hpfs_get_block = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.inode*, %struct.fiemap_extent_info*, i32, i32)* @hpfs_fiemap to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @hpfs_fiemap(%struct.inode* %0, %struct.fiemap_extent_info* %1, i32 %2, i32 %3) #0 {
  %5 = alloca %struct.inode*, align 8
  %6 = alloca %struct.fiemap_extent_info*, align 8
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  store %struct.inode* %0, %struct.inode** %5, align 8
  store %struct.fiemap_extent_info* %1, %struct.fiemap_extent_info** %6, align 8
  store i32 %2, i32* %7, align 4
  store i32 %3, i32* %8, align 4
  %9 = load %struct.inode*, %struct.inode** %5, align 8
  %10 = load %struct.fiemap_extent_info*, %struct.fiemap_extent_info** %6, align 8
  %11 = load i32, i32* %7, align 4
  %12 = load i32, i32* %8, align 4
  %13 = load i32, i32* @hpfs_get_block, align 4
  %14 = call i32 @generic_block_fiemap(%struct.inode* %9, %struct.fiemap_extent_info* %10, i32 %11, i32 %12, i32 %13)
  ret i32 %14
}

declare dso_local i32 @generic_block_fiemap(%struct.inode*, %struct.fiemap_extent_info*, i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
